--- a/0.0.1/alpine/Dockerfile
+++ b/0.0.1/alpine/Dockerfile
@@ -3,8 +3,9 @@ MAINTAINER Richard <nibocn@gmail.com>
 
 ENV TZ=Asia/Shanghai
 
-RUN apk add --no-cache --update-cache docker openssh-server && \
+RUN apk add --no-cache --update-cache docker openssh && \
     ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' && \
+    sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config && \
     echo "root:root" | chpasswd && \
     rm -rf /var/cache/apk/*
 
