--- a/0.0.1/alpine/Dockerfile
+++ b/0.0.1/alpine/Dockerfile
@@ -7,7 +7,10 @@ RUN apk add --no-cache --update-cache docker openssh && \
     ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key -N '' && \
     sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config && \
     echo "root:root" | chpasswd && \
+    mkdir -p /opt/jenkins && \
     rm -rf /var/cache/apk/*
+
+VOLUME /opt/jenkins
 
 EXPOSE 22
 
